<resources>
    <string name="app_name">Umbilical</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="umbilical">Umbilical</string>
    <string name="title_activity_register">Registo</string>
    <string name="boas_vindas">Olá, bem-vindo à familia Umbilical</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="escolher_perfil">Escolhe o teu perfil</string>
    <string name="crianca">Criança</string>
    <string name="adulto">Adulto</string>
    <string name="nome">Nome</string>
    <string name="palavra_passe">Palavra-Passe</string>
    <string name="confirmar_palavra_passe">Confirma Palavra-Passe</string>
    <string name="entrar">Entrar</string>
    <string name="codigo_umbilical">Código Umbilical</string>
</resources>
