<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.fabio.umbilical.RegisterActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/umbilical"
        android:id="@+id/textView"
        android:layout_centerHorizontal="true" />
    <LinearLayout
        android:id="@+id/registo_p1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="20dp"
        android:orientation="vertical"

        >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/boas_vindas"
            android:gravity="center"
            android:textSize="25sp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/escolher_perfil"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5sp"
            android:gravity="center"
            android:layout_marginTop="25sp">

            <Button
                android:id="@+id/adulto_button_id"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/adulto"

                />
            <Button
                android:id="@+id/crianca_button_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crianca"

                />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/registo_adulto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:visibility="gone"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/edit_nome_registo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/palavra_passe"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/edit_palavra_passe_registo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmar_palavra_passe"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/edit_confirmar_palavra_passe_registo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/button_registo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/entrar"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/registo_crianca"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:visibility="gone">


       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/nome"
           android:textSize="20sp"
           />
        <EditText
            android:id="@+id/edit_nome_registo_crianca"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/codigo_umbilical"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entrar"
            android:layout_gravity="center"/>
    </LinearLayout>


</RelativeLayout>
